# honeyaml

./: .dockerignore  .gitignore  Cargo.toml  README.md  api.yml
.github/: codecov.yml  dependabot.yml
.github/workflows/: code-coverage.yml  pr.yml  publish.yml
docker/: Dockerfile
scripts/: Cargo.toml  coverage.sh  dockerbuild.sh  gen_lcov_report.sh
scripts/src/: main.rs
src/: handler.rs  logger.rs  main.rs  schema.rs  state.rs
tests/: cli.rs
