[package]
name = "honeyaml"
version = "1.0.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = "4.2.1"
serde = "1.0.152"
serde_yaml = "0.9.16"
jwt-simple = "0.11.2"
actix-web-httpauth = "0.8.0"
anyhow = "1.0.68"
regex = "1.7.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
log = "0.4.17"
actix-cors = "0.6.4"
tracing-appender = "0.2.2"

[dependencies.clap]
version = "4.1.1"
features = ["help", "std", "derive", "env"]
optional = false
default-features = false

